--- a/GymWorkoutAPI/GymWorkoutAPI.csproj
+++ b/GymWorkoutAPI/GymWorkoutAPI.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.4" />
+    <PackageReference Include="WebGrease" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
